Queue Implemented, SplitMapSuffle Concurrent, Statistics ONLY Created